# python-loteria

./: README.md  com.github.ffrancoc.Loteria.json  meson.build
data/: com.github.ffrancoc.Loteria.appdata.xml.in  com.github.ffrancoc.Loteria.desktop.in  com.github.ffrancoc.Loteria.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: bienvenida.py  item_carta.py  item_carton.py  juegoloteria.gresource.xml  juegoloteria.in  jugador.py  main.py  meson.build  opcion_a.py  opcion_b.py  principal.py  seleccion.py  window.py
src/css/: style.css
src/gtk/: bienvenida.blp  opcion-a.blp  opcion-b.blp  principal.blp  seleccion.blp  window.blp
